--- a/components/ssq/product-item-my/index.wxml
+++ b/components/ssq/product-item-my/index.wxml
@@ -13,7 +13,7 @@
       <van-tag color="#f2826a" plain class="t_space">{{item.name}}</van-tag>
     </block>
   </view>
-  <view slot="footer">
+  <view slot="footer" hidden="{{hideFooter}}">
     <van-button type="{{onsellBtnType}}" size="mini" class="t_space" catchtap="onSell" data-id="{{product.productid}}" data-onsell="{{product.onsell}}">{{sellText}}</van-button>
     <van-button size="mini" class="t_space" catchtap="onOpenADChoose" data-id="{{product.productid}}">做广告</van-button>
     <van-button size="mini" class="t_space" catchtap="proEdit" data-id="{{product.productid}}">编辑</van-button>
