--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -80,7 +80,7 @@
       <van-row>
         <block wx:for="{{shopADInfo}}" wx:for-index="index">
           <van-col span="6">
-            <ssq-logo shop="{{item}}" cflag="{{item.flag}}" bindtap="onBusClick" data-id="{{item.shopid}}" />
+            <ssq-logo shop="{{item}}" cflag="{{item.flag}}" bindtap="onBusClick" data-id="{{item.shopid}}" data-owner="{{item.owner}}" />
           </van-col>
         </block>
       </van-row>
