--- a/pages/message/message.wxml
+++ b/pages/message/message.wxml
@@ -1,5 +1,8 @@
 <!--pages/message.wxml-->
 <view class="container">
+  <view hidden="{{msgList == null ? false : true}}" style="margin-top:20rpx;">
+    <text>还没有收到任何消息！</text>
+  </view>
   <van-dialog id="van-dialog" />
   <view class="list_ctn">
     <scroll-view>
