--- a/pages/district/join/join.wxml
+++ b/pages/district/join/join.wxml
@@ -5,7 +5,7 @@
     <text class="n_name">{{ssqInfo.name}} 社圈</text>
     <text class="n_area">{{ssqInfo.area}}</text>
     <text class="n_dis">距离：{{ssqInfo.distance}}km</text>
-    <image class="n_pos" mode="aspectFit" bindtap="openPosition" src="../../../static/custom/icons/icon_pos_b.png"></image>
+    <!-- <image class="n_pos" mode="aspectFit" bindtap="openPosition" src="../../../static/custom/icons/icon_pos_b.png"></image> -->
   </view>
   <view class="photo_info">
     <image class="p_img" mode="aaaspectFit" src="{{ssqInfo.imageUrl}}" data-src="{{ssqInfo.imageUrl}}" bindtap="previewImage"></image>
