--- a/pages/my/product/viewer/viewer.wxss
+++ b/pages/my/product/viewer/viewer.wxss
@@ -1,5 +1,5 @@
 /* pages/my/product/viewer/viewer.wxss */
-.container{width: 100%;height: 100%;}
+.container{width: 100%;height: 100%;overflow: hidden;}
 .space_line{width: calc(100% - 10rpx);height: 5rpx;background-color: gainsboro;margin-left: 9rpx;margin-top: 10rpx;margin-bottom: 10rpx;}
 .space{width: 100%;height: 15rpx;}
 .shopctn{width: 100%;padding-left: 10rpx;height:50rpx;margin-top:10rpx;display: flex;flex-direction: row;align-items: center;font-size: 32rpx;}
@@ -16,10 +16,13 @@
 .order_detail_btn{color: blue;text-decoration-line: underline;}
 .order_cancel_btn{color: blue;text-decoration-line: underline;margin-left: 10rpx;}
 .order_list{width: 100%;height: auto;font-size: 24rpx;}
-.list_item{width: 100%;height: 30rpx;display: flex;flex-direction: row;align-items: center;}
-.item_name{width: 25%;height: 30rpx;border: 1rpx solid silver;text-align: center;}
-.item_tel{width:30%;height: 30rpx;border: 1rpx solid silver;text-align: center;}
-.item_count{width: 15%;height: 30rpx;border: 1rpx solid silver;text-align: center;}
-.item_date{width: 30%;height: 30rpx;border: 1rpx solid silver;text-align: center;}
+.list_item{width: 100%;height: 60rpx;display: flex;flex-direction: row;align-items: center;}
+.item_name{width: 20%;height: auto;text-align: center;}
+.item_tel{width:30%;height: auto;text-align: center;}
+.item_count{width: 10%;height: auto;text-align: center;}
+.item_date{width: 25%;height: auto;text-align: center;}
+.item_sum{width: 15%;height: auto;text-align: center;}
+.item_line{width:100%;height: 2rpx;background-color: silver;}
+.item_vline{width: 2rpx;height: 100%;background-color: silver;}
 
 
