--- a/pages/my/product/viewer/viewer.wxml
+++ b/pages/my/product/viewer/viewer.wxml
@@ -40,11 +40,32 @@
     <text class="des_value">至-{{productInfo.product.datetext}}</text>
   </view>
   <view class="space_line"></view>
-  <view class="order_ctn">
+  <view class="order_ctn" hidden="{{hideBespeak}}">
     <view class="order_sum">
       <text>产品预约情况：</text>
-      <text>(预约人数 {{productInfo.orderinfo.count}} ，数量 {{productInfo.orderinfo.total}})  </text>
-      <text class="order_cancel_btn">取消预约</text>
+      <text>(预约人数 {{productInfo.bespeak.count}} ，数量 {{productInfo.bespeak.total}})  </text>
+      <view hidden="{{hideBespeakBtn}}">
+        <text class="order_cancel_btn" bindtap="onBespeak">{{bespeakType == 0 ? '预约' : "取消预约"}}</text>       
+      </view>
+    </view>
+    <view class="bespeak_ctn" hidden="{{hideInput}}">
+      <view style="width:100%;height:2rpx;"></view>
+      <view class="b_content">
+        <view class="b_item">
+          <text class="b_tag">联系：</text>
+          <input class="b_value" maxlength="25" type="text" placeholder="输入电话或者微信号等" bindinput="onInput" data-dtype="1"></input>
+        </view>
+        <view class="b_item">
+          <text class="b_tag">数量：</text>
+          <input class="b_value" maxlength="3" type="number" placeholder="输入要预约的数量" bindinput="onInput" data-dtype="2"></input>
+        </view>
+        <view class="b_item">
+          <text class="b_tag">备注：</text>
+          <input class="b_value" maxlength="25" type="text" placeholder="输入如房号3B1707等" bindinput="onInput" data-dtype="3"></input>
+        </view>
+      </view>    
+      <view style="width:100%;height:2rpx;"></view>
+      <button type="primary" bindtap="onCommit">提交预约</button>
     </view>
     <view class="space"></view>
     <text class="order_detail_btn" bindtap="onOrderDetail">{{orderDetaiLabel}}</text>
@@ -64,7 +85,7 @@
         <view class="item_vline"></view>
       </view>
       <view class="item_line"></view>
-      <block wx:for="{{productInfo.orderinfo.list}}" wx:for-index="index">
+      <block wx:for="{{productInfo.bespeak.list}}" wx:for-index="index">
       <view class="list_item">
         <view class="item_vline"></view>
         <view class="item_name">{{item.name}}</view>
@@ -73,9 +94,9 @@
         <view class="item_vline"></view>
         <view class="item_count">{{item.count}}</view>
         <view class="item_vline"></view>
-        <view class="item_date">{{item.date}}</view>
+        <view class="item_date">{{item.time}}</view>
         <view class="item_vline"></view>
-        <view class="item_sum">{{item.sum}}</view>
+        <view class="item_sum">{{item.summary}}</view>
         <view class="item_vline"></view>
       </view>
       <view class="item_line"></view>
