--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -43,3 +43,14 @@ display: flex;flex-direction: row;border: 1rpx solid white;border-bottom-color: 
 
 .adType_ctn{width: 100%; height: 100%;}
 .tagsctn{display: flex;flex-direction: row;}
+
+.person_ctn{width: 100%;height: auto;display: flex;flex-direction: row;margin-top: 15rpx;margin-bottom: 15rpx;}
+.p_left{width: 280rpx;height: 500rpx;border: 1rpx solid sandybrown;border-radius: 10rpx;}
+.p_left image{width: 98%;height: 98%;margin: 1%;}
+.p_right{width: calc(100% - 280rpx);height: auto;display: flex;flex-direction: column;}
+.p_name{font-size: 32rpx;width: 96%;margin-left:2%}
+.p_ssq{font-size: 20rpx;width: 96%;margin-left: 2%;}
+.p_item{width:96%;margin-left:2%;font-size: 24rpx;display: flex;flex-direction: row;margin-top: 10rpx;}
+.p_tag{width: 120rpx;height: auto;}
+.p_value{width:calc(100% - 120rpx);height: auto;}
+.p_item image{width: 60%;margin-left:20%; height: 180rpx;}
