--- a/pages/shop/shop.wxss
+++ b/pages/shop/shop.wxss
@@ -18,4 +18,16 @@
 .list_tag{font-size: 28rpx;}
 .t_space{margin: 5rpx;}
 
+.person_ctn{width: 100%;height: auto;display: flex;flex-direction: row;margin-top: 15rpx;margin-bottom: 15rpx;}
+.p_left{width: 280rpx;height: 500rpx;border: 1rpx solid sandybrown;border-radius: 10rpx;}
+.p_left image{width: 98%;height: 98%;margin: 1%;}
+.p_right{width: calc(100% - 280rpx);height: auto;display: flex;flex-direction: column;}
+.p_name{font-size: 40rpx;width: 92%;margin-left:4%}
+.p_ssq{font-size: 20rpx;width: 92%;margin-left: 4%;}
+.p_item{width:92%;margin-left:4%;font-size: 24rpx;display: flex;flex-direction: row;margin-top: 10rpx;}
+.p_tag{width: 120rpx;height: auto;}
+.p_value{width:calc(100% - 120rpx);height: auto;}
+.p_item image{width: 100rpx; height: 140rpx;}
+.share_btn{height: 70rpx;display: flex;flex-direction: row;align-items: center;color: rgb(128, 127, 127);font-size: 26rpx;margin-right: 1rpx;margin-top: 70rpx;}
+.share_btn image{width:50rpx; height: 50rpx;margin-right: 15rpx;}
 
