--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -92,6 +92,10 @@
       </view>
       <view class="p_item">
         <image src="{{myShopInfo.ssqCImgUrl}}" data-src="{{myShopInfo.ssqCImgUrl}}" bindtap="previewImage"></image>
+        <button class='share_btn' id="shareBtn" open-type="share" hover-class="other-button-hover">
+          <image src='../../static/custom/icons/share_icon.png'></image>
+          分享
+        </button>
       </view>
     </view>
   </view>
