--- a/components/ssq/shop-item/shop-item.wxss
+++ b/components/ssq/shop-item/shop-item.wxss
@@ -14,5 +14,6 @@
 .shop_star{width: 25rpx;height: 25rpx;margin: 5rpx;}
 
 .btns_ctn{width: 200rpx;height: auto;display: flex;flex-direction: row;}
-.btns_ctn button{width: 100rpx;height: 70rpx;display: flex;flex-direction: row;align-items: center;}
+.btn_zan_ctn{width: 60rpx;height: 60rpx;border-radius: 50%;overflow: hidden;border: 1rpx solid rgb(233, 233, 233)}
+.btn_zan_ctn button{width: 100rpx;height: 70rpx;display: flex;flex-direction: row;align-items: center;margin-left: -20rpx;margin-top: -5rpx;}
 .btn_zan{width: 50rpx;height: 50rpx;}
