--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -29,6 +29,14 @@
       <view class="detail_left">
         <view class="shop_sum">
           <view class="sum_item">
+            <text class="sum_item_tag">综合评价：</text>
+            <view class="ctn_stars">
+              <block wx:for="{{myShopInfo.stars}}" wx:for-index="index">
+              <image class="shop_star" mode="aspectFit" src="../../static/icons/favorites-filling_{{item}}.png"></image>
+              </block>
+            </view>
+          </view>
+          <view class="sum_item">
             <view class="sum_item_left">
               <text class="sum_item_tag">商家类型：</text>
               <text class="sum_item_value">{{shop_type}}</text>
@@ -70,6 +78,14 @@
     <view class="p_right">
       <text class="p_name">{{myShopInfo.name}}</text>
       <text class="p_ssq">{{myShopInfo.ssqinfo[0].area}}{{myShopInfo.ssqinfo[0].name}}社圈</text>
+      <view class="p_item">
+        <text class="p_tag">综合评价：</text>
+        <view class="ctn_stars">
+          <block wx:for="{{myShopInfo.stars}}" wx:for-index="index">
+          <image class="shop_star" mode="aspectFit" src="../../static/icons/favorites-filling_{{item}}.png"></image>
+          </block>
+        </view>
+      </view>
       <view class="p_item">
         <text class="p_tag">商家类型：</text>
         <text class="p_value">{{shop_type}}</text>
